--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+    background-color: #bfbab0;
+    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e3e0db' fill-opacity='0.26'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+
+    color: #262625;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    box-sizing: border-box;
+}
+
+.center-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1300px;
+    margin: auto;
+}
+
+.search-container {
+    margin: 40px;
+    min-width:300px;
+}
+
+.search-container input {
+    font-size: 24px;
+    width: 100%
+}
+
+.breed-results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.breed-card {
+    flex: 0 1 calc(22% - 1em);
+    min-height:140px;
+    min-width: 200px;
+    padding: 15px;
+    margin: 10px;
+
+    border-radius: 10px;
+    background: #BFBAB0;
+    box-shadow:  7px -7px 14px #aaa69d,
+    -7px 7px 14px #d4cec3;
+}
+
+.breed-card .header {
+    margin: 0;
+    font-size: 26px;
+}
+
+.breed-card .subBreed-header {
+    font-size: 18px;
+
+    margin: 6px 0 8px 0;
+    font-weight: normal;
+    font-style: italic;
+}
+.breed-card .subBreed-wrapper {
+    /*height: 40px;*/
+    /*overflow-y: auto;*/
 }
